--- a/hero1.html
+++ b/hero1.html
@@ -7,16 +7,36 @@
     <body>
         <div class="header">
             <div class="nav">
-                <div class="logo"></div>
-                <div class="menu"></div>
-                <div class="button"></div>
+                <div class="logo_wrap">
+                    <div class="logo">
+                        <img src="./images/logo.png" alt="">
+                    </div>
+                    <h1>LOGO</h1>
+                </div>
+                <div class="menu">
+                    <ul>
+                        <li>Home</li>
+                        <li>About us</li>
+                        <li>Contact</li>
+                    </ul>
+                </div>
+                <div class="button">
+                    <button>Order now</button>
+                </div>
             </div>
         </div>
         
         <div class="hero">
             <div class="contents">
-                <div class="texts"></div>
-                <div class="photo"></div>
+                <div class="texts">
+                    <h3>Lorem, ipsum dolor.</h3>
+                    <h2>Lorem, ipsum dolor.</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, suscipit provident! Atque aspernatur quia magni, laborum tenetur recusandae voluptas accusamus ut iure possimus magnam. Quis nobis eius voluptate corporis cumque!</p>
+                    <button>explore</button>
+                </div>
+                <div class="photo">
+                    <img src="./images/photo.jpg" alt="">
+                </div>
             </div>
         </div>
     </body>
