--- a/hero1.html
+++ b/hero1.html
@@ -31,7 +31,7 @@
                 <div class="texts">
                     <h3>Lorem, ipsum dolor.</h3>
                     <h2>Lorem, ipsum dolor.</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, suscipit provident! Atque aspernatur quia magni, laborum tenetur recusandae voluptas accusamus ut iure possimus magnam. Quis nobis eius voluptate corporis cumque!</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, suscipit provident! Atque aspernatur quia magni, laborum tenetur recusandae voluptas accusamus!</p>
                     <button>explore</button>
                 </div>
                 <div class="photo">
