--- a/hero2.html
+++ b/hero2.html
@@ -18,14 +18,34 @@
                     <li>About us</li>
                     <li>Contact</li>
                 </ul>               
-                <div class="button"></div>
+                <div class="button">Order now</div>
             </div>
         </div> 
 
         <div class="hero">
             <div class="contents">
-                <div class="top"></div>
-                <div class="bottom"></div>
+                <div class="top">
+                    <div class="texts">
+                        <h3>Lorem, ipsum dolor.</h3>
+                        <h2>Lorem ipsum dolor sit.</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, facilis autem. Itaque illo nostrum inventore laborum repudiandae.</p>
+                        <div class="btns">
+                            <button>Order now</button>
+                            <button>Explore</button>
+                        </div>
+                    </div>
+                    <div class="photo">
+                        <img src="./images/photo.jpg" alt="">
+                    </div>
+                </div>
+                <div class="bottom">
+                    <p>Trusted by:</p>
+                    <div class="banners">
+                        <img src="./images/icon_google.png" alt="">
+                        <img src="./images/icon_youtube.png" alt="">
+                        <img src="./images/icon_facebook.png" alt="">
+                    </div>
+                </div>
             </div>
         </div>
     </body>
