--- a/hero3.html
+++ b/hero3.html
@@ -20,22 +20,24 @@
             </div>
         </div>
 
-        <div class="hero">
-            <div class="texts">
-                <h3>Lorem, ipsum dolor.</h3>
-                <h2>Lorem ipsum dolor sit amet.</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem et ipsam odio quisquam iure dolorum corporis aliquid officiis numquam a illo iusto aliquam rerum quaerat temporibus porro, distinctio harum illum?</p>
-                <div class="btns">
-                    <button>Order now</button>
-                    <button>Explore</button>
+        <div class="hero_wrap">
+            <div class="hero">
+                <div class="texts">
+                    <h3>Lorem, ipsum dolor.</h3>
+                    <h2>Lorem ipsum dolor sit amet.</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem et ipsam odio quisquam iure dolorum corporis aliquid officiis numquam a illo iusto aliquam rerum quaerat?</p>
+                    <div class="btns">
+                        <button>Order now</button>
+                        <button class="outline">Explore</button>
+                    </div>
                 </div>
-            </div>
-            <div class="banner_wrap">
-                <p>Trusted by:</p>
-                <div class="banners">
-                    <a href="#"><img src="./images/icon_google.png" alt=""></a>
-                    <a href="#"><img src="./images/icon_youtube.png" alt=""></a>
-                    <a href="#"><img src="./images/icon_facebook.png" alt=""></a>
+                <div class="banner_wrap">
+                    <p>Trusted by:</p>
+                    <div class="banners">
+                        <a href="#"><img src="./images/icon_google.png" alt=""></a>
+                        <a href="#"><img src="./images/icon_youtube.png" alt=""></a>
+                        <a href="#"><img src="./images/icon_facebook.png" alt=""></a>
+                    </div>
                 </div>
             </div>
         </div>
