--- a/client/client01.html
+++ b/client/client01.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="texts">
                     <h3>Lorem, ipsum dolor.</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero possimus animi illum dolorem debitis, repellat facilis non voluptatum nihil esse asperiores, delectus vel iusto soluta nam? Qui quam unde provident.</p>
+                    <p class="words">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero possimus animi illum dolorem debitis, repellat facilis non voluptatum nihil esse asperiores, delectus vel iusto soluta nam? Qui quam unde provident.</p>
                     <p class="username">Lorem, ipsum.</p>
                     <p class="job">Lorem ipsum dolor sit.</p>
                 </div>
